# VTIL-NativeLifters

./: CMakeLists.txt
IDA-Plugin/: CMakeLists.txt  main.cpp
